terraform/infrastructure/security.tf
resource "aws_security_group" "alb" {

  name = "${var.project_name}-alb-sg"

  description = "Security group for application load balancer"

  vpc_id = aws_vpc.main.id


  ingress {

    from_port = 80

    to_port = 80

    protocol = "tcp"

    cidr_blocks = [
      "0.0.0.0/0"
    ]

  }


  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = [
      "0.0.0.0/0"
    ]

  }


  tags = {
    Name    = "${var.project_name}-alb-sg"
    Project = var.project_name
  }
}



resource "aws_security_group" "ecs" {

  name = "${var.project_name}-ecs-sg"

  description = "Security group for ECS application tasks"

  vpc_id = aws_vpc.main.id


  ingress {

    from_port = 3000

    to_port = 3000

    protocol = "tcp"


    security_groups = [
      aws_security_group.alb.id
    ]

  }


  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = [
      "0.0.0.0/0"
    ]

  }


  tags = {
    Name    = "${var.project_name}-ecs-sg"
    Project = var.project_name
  }
}
